objects/Time_Tracking_Week__c.object
<CustomObject>
    <description>This object is for capturing time tracking by week.</description>
    <fields>
        <fullName>Key_Accomplishments__c</fullName>
        <description>Key Accomplishments for the week.</description>
        <label>Key Accomplishments</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Time_Tracking__c</fullName>
        <description>Master-detail relationship between Time Tracker and Time Tracker Weekly Details</description>
        <label>Time Tracking</label>
        <referenceTo>Time_Tracking__c</referenceTo>
        <relationshipName>Time_Tracker_Week</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Hours_for_Week__c</fullName>
        <description>The total hours for the week.</description>
        <label>Total Hours for Week</label>
        <summarizedField>Time_Tracking_Activity__c.Hours__c</summarizedField>
        <summaryForeignKey>Time_Tracking_Activity__c.Time_Tracking_Activity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Week_of__c</fullName>
        <description>The week for Time Tracking activities.</description>
        <label>Week of</label>
        <type>Date</type>
    </fields>
    <label>Time Tracking Week</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Time Tracker Week ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Tracking Week</pluralLabel>
    <recordTypes>
        <fullName>Internal</fullName>
        <active>true</active>
        <description>Internal Time Tracker Week Details</description>
        <label>Internal</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>